objects/Community__c.object
<CustomObject>
    <fields>
        <fullName>EventDate__c</fullName>
        <label>Event Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperlink__c</fullName>
        <label>Hyperlink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImagePath__c</fullName>
        <label>Image Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Community</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>CN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communitys</pluralLabel>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <description>Events</description>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP_Templates</fullName>
        <active>true</active>
        <label>RFP Templates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinars</fullName>
        <active>true</active>
        <description>Webinars</description>
        <label>Webinars</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>